--- a/ads-repository/manifest.json
+++ b/ads-repository/manifest.json
@@ -1,6 +1,4 @@
 [
-  "pub_image_1.jpg",
-  "promo_video_noel.mp4",
-  "nouveau_produit.png",
-  "banner_ete_2024.gif"
+  "mohapp.PNG",
+  "eee.PNG"
 ]
